<?xml version="1.0" encoding="UTF-8"?>

<!--

Compilation and installation of all modules in the local repository:
  mvn clean install

Compilation and installation of all modules in the local repository, without running the tests nor generating Javadocs:
  mvn clean install -DskipTests -Dmaven.javadoc.skip

Compilation of selected modules, sign with the given key and deploy to Maven Central:
  mvn clean deploy -Prelease -Dgpg.keyname=4C7956B69002DE470EA573E2EA910A03A447A7E5

By using the maven-flatten-plugin, this pom.xml allows us to use properties to define
the versions of the artifacts: the properties will be replaced by their value in the deployed artifacts.
Moreover, this makes the parent pom useless, hence it is not deployed.
Note: submodules whose artifact must be deployed on Maven Central must activate the Nexus staging plugin
(see for instance the pom-xml of the io-mokamint-miner-api submodule).

-->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <properties>
      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
      <maven.compiler.release>17</maven.compiler.release>
      <mokamint.version>1.0.1</mokamint.version>
      <io.hotmoka.annotations.version>1.4.1</io.hotmoka.annotations.version>
      <io.hotmoka.crypto.version>1.4.3</io.hotmoka.crypto.version>
      <io.hotmoka.closeables.version>1.4.1</io.hotmoka.closeables.version>
      <io.hotmoka.websockets.version>1.4.5</io.hotmoka.websockets.version>
      <io.hotmoka.cli.version>1.2.2</io.hotmoka.cli.version>
      <io.hotmoka.marshalling.version>1.4.5</io.hotmoka.marshalling.version>
      <io.hotmoka.exceptions.version>1.4.1</io.hotmoka.exceptions.version>
      <io.hotmoka.xodus.version>1.4.5</io.hotmoka.xodus.version>
      <io.hotmoka.testing.version>1.4.1</io.hotmoka.testing.version>
    </properties>

    <groupId>io.mokamint</groupId>
    <artifactId>mokamint</artifactId>
    <packaging>pom</packaging>
    <version>parent</version>
    <name>Mokamint</name>
    <description>A generic proof-of-space blockchain engine.</description>
    <url>https://github.com/Mokamint-chain/mokamint</url>

    <organization>
      <url>https://www.mokamint.io</url>
      <name>Mokamint</name>
    </organization>

    <inceptionYear>2023</inceptionYear>

    <licenses>
      <license>
        <name>The Apache License, Version 2.0</name>
        <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
      </license>
    </licenses>

    <developers>
      <developer>
        <name>Fausto Spoto</name>
        <email>fausto.spoto@gmail.com</email>
        <organization>Mokamint</organization>
        <organizationUrl>https://www.mokamint.io</organizationUrl>
        <timezone>UTC+01:00</timezone>
      </developer>
    </developers>

    <modules>
      <module>io-mokamint-node-api</module>
      <module>io-mokamint-node</module>
      <module>io-mokamint-node-local-api</module>
      <module>io-mokamint-node-local</module>
      <module>io-mokamint-node-cli</module>
      <module>io-mokamint-node-service-api</module>
      <module>io-mokamint-node-service</module>
      <module>io-mokamint-node-messages-api</module>
      <module>io-mokamint-node-messages</module>
      <module>io-mokamint-node-remote-api</module>
      <module>io-mokamint-node-remote</module>
      <module>io-mokamint-node-integration</module>
      <module>io-mokamint-miner-api</module>
      <module>io-mokamint-miner-local</module>
      <module>io-mokamint-miner-remote</module>
      <module>io-mokamint-miner-service-api</module>
      <module>io-mokamint-miner-service</module>
      <module>io-mokamint-miner-cli</module>
      <module>io-mokamint-plotter</module>
      <module>io-mokamint-plotter-api</module>
      <module>io-mokamint-nonce-api</module>
      <module>io-mokamint-nonce</module>
      <module>io-mokamint-application-messages-api</module>
      <module>io-mokamint-application-messages</module>
      <module>io-mokamint-application-service-api</module>
      <module>io-mokamint-application-service</module>
      <module>io-mokamint-application-api</module>
      <module>io-mokamint-application</module>
      <module>io-mokamint-application-remote-api</module>
      <module>io-mokamint-application-remote</module>
      <module>io-mokamint-application-integration</module>
      <module>io-mokamint-application-cli</module>
      <module>io-mokamint-plotter-cli</module>
      <module>io-mokamint-application-empty</module>
    </modules>

    <distributionManagement>
      <snapshotRepository>
        <id>ossrh</id>
        <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
      </snapshotRepository>
      <repository>
        <id>ossrh</id>
        <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
      </repository>
    </distributionManagement>

    <scm>
      <connection>scm:git:git://github.com/Mokamint-chain/mokamint.git</connection>
      <developerConnection>scm:git:git@github.com:Mokamint-chain/mokamint.git</developerConnection>
      <url>https://github.com/Mokamint-chain/mokamint</url>
      <tag>HEAD</tag>
    </scm>

    <dependencies>
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-engine</artifactId>
        <version>5.9.2</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter</artifactId>
        <version>5.9.2</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.mockito</groupId>
        <artifactId>mockito-core</artifactId>
        <version>5.3.0</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>io.hotmoka</groupId>
        <artifactId>io-hotmoka-testing</artifactId>
        <version>${io.hotmoka.testing.version}</version>
        <scope>test</scope>
      </dependency>
    </dependencies>

  <profiles>
    <profile>
      <id>release</id>
      <build>
        <plugins>
          <!-- source jars get generated -->
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-source-plugin</artifactId>
            <version>3.2.1</version>
            <executions>
              <execution>
                <id>attach-sources</id>
                <goals>
                  <goal>jar-no-fork</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <!-- the artifacts get signed -->
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>3.1.0</version>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <goals>
                  <goal>sign</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <!-- jars get sent to the remote repository -->
          <plugin>
            <groupId>org.sonatype.plugins</groupId>
            <artifactId>nexus-staging-maven-plugin</artifactId>
            <version>1.6.13</version>
            <extensions>true</extensions>
            <configuration>
              <serverId>ossrh</serverId>
              <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
              <autoReleaseAfterClose>true</autoReleaseAfterClose>
              <skipNexusStagingDeployMojo>true</skipNexusStagingDeployMojo>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.11.0</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>3.1.0</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.1.0</version>
        <configuration>
          <includes>
            <include>*.java</include>
          </includes>
          <!-- <forkCount>0</forkCount> this can be useful for testing, since the stack trace of the tests becomes available -->
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-deploy-plugin</artifactId>
        <version>3.1.1</version>
        <configuration>
          <skip>true</skip>   <!-- skip, since we are using nexus -->
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-release-plugin</artifactId>
        <version>3.0.0</version>
        <configuration>
          <autoVersionSubmodules>true</autoVersionSubmodules>
          <useReleaseProfile>false</useReleaseProfile>
          <releaseProfiles>release</releaseProfiles>
          <goals>deploy</goals>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>flatten-maven-plugin</artifactId>
        <version>1.5.0</version>
        <configuration>
          <flattenMode>oss</flattenMode>
        </configuration>
        <executions>
          <!-- enable flattening -->
          <execution>
            <id>flatten</id>
            <phase>process-resources</phase>
            <goals>
              <goal>flatten</goal>
            </goals>
          </execution>
          <!-- ensure proper cleanup -->
          <execution>
            <id>flatten.clean</id>
            <phase>clean</phase>
            <goals>
              <goal>clean</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.5.0</version>
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

</project>
